[package]
name = "sol-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.0.4"
solana-sdk = "2.0.4"
solana-transaction-status = "2.0.4"
borsh = "1.5.1"
anchor-lang = "0.30.1"
anyhow = "1.0.86"
base64 = "0.22.1"
anchor-syn = "0.30.1"
hex = "0.4.3"
